# plow-whip

./: .gitignore  README.md  pyproject.toml
docs/: WAKEUP_IMPLEMENTATION.md  architecture.md  concepts.md  onboarding.md  qoder-cn-api-suggestion.md  qoder-cn-context-compress-feedback.md
plow_whip/: __init__.py  agent_flow.py  brain.py  dispatch.py  inbox_watcher.py  qoder_session.py  whip.py
plow_whip/adr/: ADR-001_conversation_rotation.md
plow_whip/templates/: AGENT_COMMS.md.tpl  AGENT_STATE.json.tpl  CONVENTIONS.md.tpl
plow_whip/templates/memory/: CURRENT_STATUS.md.tpl  DECISIONS.md.tpl  NEXT_ACTION.md.tpl  PROJECT.md.tpl  ROADMAP.md.tpl
tests/: test_agent_flow.py  test_dispatch.py  test_whip.py
