[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plow-whip"
version = "0.1.0"
description = "Multi-Agent Collaboration Framework — 多Agent协作工具·耕田之鞭"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Wu Jun", email = "niugengtian@users.noreply.github.com"},
]
keywords = ["multi-agent", "collaboration", "ai", "codex", "cursor", "qoder"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
plow-whip = "plow_whip.agent_flow:main"

[tool.setuptools.packages.find]
include = ["plow_whip*"]

[tool.setuptools.package-data]
plow_whip = ["templates/**/*", "adr/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
